# receipt-monster

./: .firebaserc  .gitignore  .replit  README.md  babel.config.js  firebase-admin.js  firebase.js  firestore.rules  global.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  types.ts  vercel.json
chrome_extention/: background.js  content.js  manifest.json  popup.html  popup.js
components/: .AuthenticatedHome.tsx.swp  .ReceiptList.tsx.swp  AddReceiptModal.tsx  AuthenticatedHome.tsx  CommonComponents.tsx  ReceiptItem.tsx  ReceiptList.tsx  ReceiptMonsterApp.tsx  ReportView.tsx  UnauthenticatedHome.tsx  types.ts
context/: AuthContext.tsx
hook/: useAuth.ts
hooks/: useAuth.ts  useRealTimeReceipts.ts  useReceipts.ts
pages/: .globals.css.swp  404.tsx  CommonComponents.tsx  MainContent.tsx  ReceiptList.tsx  _app.tsx  _document.tsx  _error.tsx  about.tsx  account.tsx  blog.tsx  contact.tsx  globals.css  index.tsx  layout.tsx  login.tsx  price.tsx  privacy-policy.tsx  services.tsx  signup.tsx  specified-commercial-transactions.tsx  success.tsx  terms-of-service.tsx
pages/admin/: AdminLayout.tsx  admins.tsx  index.tsx  receipts.tsx  users.tsx
script/: generate_enab_key.js  generate_key.js
solana_timestamp_program/: Cargo.toml  addTimestamp.js  getTimestamp.js  id.json  initialize.js  test.js
solana_timestamp_program/src/: lib.rs
types/: Receipt.ts  heic-convert.d.ts
utils/: binance.ts  constants.ts  findSimilarReceipts.ts  formatCurrency.ts  formatRelativeTime.ts  formatters.ts  helpers.ts  polygon.ts  solana.ts  uploadReceipt.ts
(+12 files in other folders)
